# aoc

./: .gitignore  Cargo.toml  README.md
benches/: y2024d01.rs  y2024d02.rs  y2024d03.rs  y2024d04.rs  y2024d05.rs  y2024d06.rs  y2024d07.rs  y2024d08.rs
src/: lib.rs  util.rs
src/y2024/: d01.rs  d02.rs  d03.rs  d04.rs  d05.rs  d06.rs  d07.rs  d08.rs  mod.rs
