[package]
name = "aoc"

edition = "2021"
version = "0.1.0"

[dependencies]
dotenvy            = { version = "0.15.7" }
eyre               = { version = "0.6.12" }
itertools          = { version = "0.13.0" }
reqwest            = { version = "0.12.9", features = ["blocking", "cookies"] }
tracing            = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.19" }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
harness = false
name    = "y2024d01"

[[bench]]
harness = false
name    = "y2024d02"
