[package]
name = "aoc"

edition = "2021"
version = "0.1.0"

[dependencies]
dotenvy            = { version = "0.15.7" }
eyre               = { version = "0.6.12" }
itertools          = { version = "0.13.0" }
rayon              = { version = "1.10.0" }
regex              = { version = "1.11.1" }
reqwest            = { version = "0.12.9", features = ["blocking", "cookies"] }
tracing            = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.19" }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
harness = false
name    = "y2024d01"

[[bench]]
harness = false
name    = "y2024d02"

[[bench]]
harness = false
name    = "y2024d03"

[[bench]]
harness = false
name    = "y2024d04"

[[bench]]
harness = false
name    = "y2024d05"

[[bench]]
harness = false
name    = "y2024d06"

[[bench]]
harness = false
name    = "y2024d07"
